--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /*font-smoothing: antialiased;*/
   text-rendering: optimizeLegibility;
   box-sizing: border-box;
   appearance: none;
@@ -16,13 +15,11 @@
   font: inherit;
   color: inherit;
 }
-
 *,
 :after,
 :before {
   box-sizing: border-box;
 }
-
 :root {
   -webkit-tap-highlight-color: transparent;
   -webkit-text-size-adjust: 100%;
@@ -33,12 +30,10 @@
   -moz-tab-size: 4;
   tab-size: 4;
 }
-
 html,
 body {
   height: 100%;
 }
-
 img,
 picture,
 video,
@@ -47,30 +42,24 @@ svg {
   display: block;
   max-width: 100%;
 }
-
 button {
   background: none;
   border: 0;
   cursor: pointer;
 }
-
 ul {
   list-style: none;
 }
-
 a {
   text-decoration: none;
 }
-
 fieldset {
   border: 0;
 }
-
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
 body {
   font-family: "Sora", sans-serif;
   font-size: clamp(13px, 1.11vw, 21px);
@@ -80,32 +69,26 @@ body {
   height: 100%;
   overflow: hidden;
 }
-
 [data-theme=green] {
   background-color: #002921;
   color: #f7f7f7;
 }
-
 [data-theme=yellow] {
   background-color: #f0ff3d;
   color: #002921;
 }
-
 [data-theme=white] {
   background-color: #f7f7f7;
   color: #001713;
 }
-
 [data-theme=dark] {
   background-color: #001713;
   color: #f7f7f7;
 }
-
 [data-theme=greenCard] {
   background-color: #003d31;
   color: #f7f7f7;
 }
-
 .blind {
   position: absolute;
   width: 1px;
@@ -114,7 +97,6 @@ body {
   clip: rect(0, 0, 0, 0);
   margin: -1px;
 }
-
 header {
   position: fixed;
   top: 1.4vw;
@@ -127,7 +109,6 @@ header {
   justify-content: space-between;
   padding: 0 36px;
 }
-
 .header .btn-menu {
   display: flex;
   align-items: center;
@@ -139,7 +120,6 @@ header {
   padding: 0 0 3px;
   color: #fff;
 }
-
 .sc-header {
   position: fixed;
   top: 0;
@@ -169,31 +149,25 @@ header {
 .sc-header .letter {
   display: inline-block;
 }
-
 .header .logo.invert svg path {
   fill: #002921;
 }
-
 .header .btn-menu.invert {
   color: #003d31;
 }
-
 .header .logo.hide {
   visibility: hidden;
 }
-
 .footer [class*=ico-],
 .gnb [class*=ico-] {
   width: 13.3px;
   height: auto;
   filter: grayscale(1) contrast(200%) invert(1);
 }
-
 .footer .ico-face,
 .gnb .ico-face {
   width: 7px;
 }
-
 .footer {
   position: relative;
   display: block;
@@ -299,15 +273,12 @@ header {
 .footer #logo {
   opacity: 0;
 }
-
 .wapper {
   position: relative;
 }
-
 .main {
   position: relative;
 }
-
 .sc-brand .inner {
   position: relative;
 }
@@ -332,7 +303,6 @@ header {
   border-radius: 0.35em;
   height: 0.7em;
 }
-
 .sc-brand .col-1 {
   position: sticky;
   top: 0;
@@ -368,7 +338,6 @@ header {
   height: 100%;
   object-fit: cover;
 }
-
 .sc-brand .col-2 {
   position: relative;
   z-index: 3;
@@ -434,7 +403,6 @@ header {
 .sc-brand .col-2.out {
   visibility: hidden;
 }
-
 .sc-digital .fixed {
   position: relative;
   z-index: 3;
@@ -451,7 +419,6 @@ header {
 .sc-digital .col .desc .char {
   opacity: 0.05;
 }
-
 .sc-garder .fixed {
   clip-path: inset(0);
 }
@@ -489,7 +456,6 @@ header {
   height: 100%;
   object-fit: cover;
 }
-
 .sc-intro .inner {
   position: relative;
   padding: 14vw 0 16vw;
@@ -576,7 +542,6 @@ header {
   width: 39vw;
   padding-left: 8vw;
 }
-
 .sc-push {
   text-align: center;
   padding: 14vw 0;
@@ -687,7 +652,6 @@ header {
 .sc-push .btn-pop-2 .letter .char:nth-of-type(4) {
   z-index: 1;
 }
-
 .sc-invert .top {
   display: flex;
   align-items: center;
@@ -772,7 +736,6 @@ header {
   font-size: clamp(18px, 1.25vw, 24px);
   padding: 0 7vw 0 10vw;
 }
-
 .sc-attend {
   display: flex;
   justify-content: center;
@@ -822,7 +785,6 @@ header {
   text-align: center;
   margin: 108px 0 0;
 }
-
 @keyframes maqueeSlide {
   from {
     transform: translateX(0);
@@ -876,4 +838,282 @@ header {
 .sc-desole .box .desc {
   text-transform: uppercase;
   text-indent: 5.3vw;
+}
+.sc-free .inner {
+  position: relative;
+  padding: 150px 0 0;
+  text-align: center;
+  background: #dae5e3;
+}
+.sc-free h2 {
+  font-size: clamp(32px, 4vw, 80px);
+  font-weight: 500;
+  line-height: 1;
+  text-transform: uppercase;
+}
+.sc-free h3 {
+  margin: 0 0 34px;
+  font-family: "Cormorant Infant", serif;
+  font-size: clamp(23px, 2vw, 40px);
+  font-weight: 300;
+  line-height: 1.2;
+  letter-spacing: -0.01em;
+}
+.sc-free .img-box {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 100vh;
+  justify-content: center;
+}
+.sc-free .seq2 {
+  position: relative;
+  width: 33.8667%;
+  height: 62.4176%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.sc-free .seq2 .img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+}
+.sc-free .seq2 .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.sc-free .seq2 .img.show {
+  visibility: visible;
+}
+.sc-free .txt-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100vh;
+  margin: -400vh 0 0;
+}
+.sc-free .txt-box .desc {
+  width: 39vw;
+  margin-left: auto;
+  margin-right: 5vw;
+  font-size: clamp(11px, 1.46vw, 28px);
+  font-weight: 400;
+  line-height: 1.38;
+  text-indent: 5vw;
+  color: #f7f7f7;
+}
+.sc-free .txt-moving {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+.sc-free .txt-moving .box {
+  position: relative;
+}
+.sc-free .txt-moving .desc {
+  display: inline-block;
+  width: 80vw;
+  margin: 0 auto;
+  font-family: "Cormorant Infant", serif;
+  font-size: clamp(79px, 10.2vw, 197px);
+  color: #f0ff3d;
+}
+.sc-free .txt-moving .desc .char {
+  transform-origin: 50% 0;
+}
+.sc-free .txt-moving .underline {
+  position: absolute;
+  top: 90%;
+  left: 1%;
+  display: block;
+  width: 100%;
+  background: #f0ff3d;
+  height: 3px;
+  transform-origin: 0 0;
+  transform: scaleX(0);
+}
+.sc-person {
+  position: relative;
+  z-index: 2;
+  padding: 240px 0 0;
+  background: #f7f7f7;
+}
+.sc-person .inner {
+  width: 96vw;
+  margin: 0 auto;
+}
+.sc-person .txt {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 0 240px 8vw;
+}
+.sc-person .txt .small {
+  width: 23vw;
+  margin: 60px 1.4vw 0 0;
+  text-transform: uppercase;
+}
+.sc-person .txt .big {
+  width: 57vw;
+  font-family: "Cormorant Infant", serif;
+  font-size: clamp(59px, 7.6vw, 146px);
+  font-weight: 300;
+  line-height: 1.14;
+}
+.sc-job {
+  margin: -100vh 0 0;
+}
+.sc-job .inner {
+  position: relative;
+}
+.sc-job .row {
+  position: relative;
+  overflow: hidden;
+}
+.sc-job .row .card-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 5vw;
+  width: max-content;
+  height: 100vh;
+  padding: 0 130vw;
+}
+.sc-job .row .card-list .card-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 24vw;
+  height: 36vw;
+  border-radius: 20px;
+  padding: 38px;
+}
+.sc-job .row .card-list .card-item .name {
+  display: inline-block;
+  font-size: clamp(29px, 3vw, 72px);
+  font-weight: 500;
+  line-height: 1.075;
+}
+.sc-job .row .card-list .card-item .job {
+  display: inline-block;
+  margin: 30px 0 0;
+  font-weight: 300;
+  color: #f0ff3d;
+}
+.sc-job .row .card-list .card-item .desc {
+  font-size: clamp(13px, 1vw, 19px);
+  line-height: 1.57;
+}
+.sc-job .row .card-list .card-item:nth-child(1) {
+  transform: translate(-45%, 15%) rotate(12deg);
+}
+.sc-job .row .card-list .card-item:nth-child(2) {
+  transform: translate(44%, 14%) rotate(12deg);
+}
+.sc-job .row .card-list .card-item:nth-child(3) {
+  transform: translate(30%, -14%) rotate(17deg);
+}
+.sc-job .row .card-list .card-item:nth-child(4) {
+  transform: translate(-42%, -14%) rotate(16deg);
+}
+.sc-job .row .card-list .card-item:nth-child(5) {
+  transform: translate(-45%, 13%) rotate(-14deg);
+}
+.sc-job .row .card-list .card-item:nth-child(6) {
+  transform: translate(33%, -15%) rotate(-18deg);
+}
+.sc-job .col {
+  position: relative;
+  margin: -45vw 0 0;
+}
+.sc-job .col h2 {
+  width: 47vw;
+  text-align: center;
+  margin: 0 auto;
+  font-family: "Cormorant Infant", serif;
+  font-size: clamp(40px, 4.9vw, 93px);
+  font-weight: 300;
+  line-height: 1.03;
+  letter-spacing: -0.01em;
+}
+.sc-job .col .flex {
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  padding: 156px 0 220px;
+  margin: 0 auto;
+}
+.sc-job .col .question {
+  width: 31vw;
+}
+.sc-job .col .question .btn-q {
+  position: relative;
+  z-index: 10;
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 0 50px;
+  margin: 1.4vw 0 0;
+  text-align: left;
+  border-radius: 60px;
+  border: 1px solid rgba(247, 247, 247, 0.2);
+  color: #f7f7f7;
+  background: #001713;
+  font-size: clamp(12px, 1vw, 24px);
+  font-weight: 300;
+  line-height: 1.5;
+  transform: rotateX(70deg);
+}
+.sc-job .col .question .btn-q.active, .sc-job .col .question .btn-q:hover {
+  background: #f0ff3d;
+  border-color: #f0ff3d;
+  color: #001713;
+}
+.sc-job .col .answer {
+  position: relative;
+  width: 39vw;
+  margin: 44px 0 0;
+}
+.sc-job .col .txt-a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 0 0 30px;
+  opacity: 0;
+}
+.sc-job .col .txt-a p {
+  position: relative;
+  font-size: clamp(12px, 1vw, 24px);
+  font-weight: 300;
+  line-height: 1.5;
+}
+.sc-job .col .txt-a p::before {
+  position: absolute;
+  top: 4%;
+  right: 102%;
+  width: 14px;
+  height: 14px;
+  border-radius: 100%;
+  background: #f0ff3d;
+  content: "";
+}
+.sc-job .col .txt-a ul {
+  margin: 1.4vw 0 0;
+}
+.sc-job .col .txt-a ul li {
+  margin: 5px 0 0;
+}
+.sc-job .col .txt-a.show {
+  opacity: 1;
 }
